--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="deleted">Deleted</string>
     <string name="added">Added</string>
     <string name="completed">Completed</string>
+    <string name="error">Error</string>
     <string name="error_product">Error with products loading</string>
 
     <string name="empty">Add some items!</string>
